--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,6 +6,44 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
            version="2.5">
 
+    <filter>
+        <filter-name>SystemAccessFilter</filter-name>
+        <filter-class>filters.SystemAccessFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>LoggerFilter</filter-name>
+        <filter-class>filters.LoggerFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoggerFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>SystemAccessFilter</filter-name>
+        <url-pattern>/successLogin.jsp</url-pattern>
+    </filter-mapping>
+    <listener>
+        <description>ServletContextListener</description>
+        <listener-class>listeners.HttpSessionLogListener</listener-class>
+    </listener>
+    <servlet><servlet-name>Faces Servlet</servlet-name><servlet-class>javax.faces.webapp.FacesServlet</servlet-class><load-on-startup>1</load-on-startup></servlet>
+    <servlet>
+        <servlet-name>action</servlet-name>
+        <servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
+        <init-param>
+            <param-name>config</param-name>
+            <param-value>/WEB-INF/struts-config.xml</param-value>
+        </init-param>
+        <init-param>
+            <param-name>debug</param-name>
+            <param-value>2</param-value>
+        </init-param>
+        <init-param>
+            <param-name>detail</param-name>
+            <param-value>2</param-value>
+        </init-param>
+        <load-on-startup>2</load-on-startup>
+    </servlet>
     <servlet>
         <servlet-name>Dispatcher</servlet-name>
         <servlet-class>servlets.Dispatcher</servlet-class>
@@ -30,6 +68,11 @@
         <servlet-name>UserList</servlet-name>
         <servlet-class>servlets.UserList</servlet-class>
     </servlet>
+    <servlet-mapping><servlet-name>Faces Servlet</servlet-name><url-pattern>/faces/*</url-pattern></servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>action</servlet-name>
+        <url-pattern>*.do</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Dispatcher</servlet-name>
         <url-pattern>/Dispatcher</url-pattern>
@@ -58,6 +101,5 @@
         30
     </session-timeout></session-config><welcome-file-list><welcome-file>
     index.jsp
-    </welcome-file></welcome-file-list>
+</welcome-file></welcome-file-list></web-app>
 
-</web-app>
